--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  keyboard_visibility: ^0.5.6
+  flutter_keyboard_visibility: ^0.7.0
 
 
 dev_dependencies:
@@ -53,3 +53,4 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.io/custom-fonts/#from-packages
+
