--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/ayushpgupta/Library/Android/sdk
-flutter.sdk=/Users/ayushpgupta/development/flutter
+sdk.dir=C:\\Users\\ACER\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Users\\ACER\\Pictures\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
