--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: search_widget
 description: A Flutter package which provides a Search Widget for selecting an option from a data list.
-version: 1.0.2
-author: Ayush P Gupta <ayushpguptaapg@gmail.com>
+version: 1.1.0
 homepage: https://github.com/apgapg/search_widget
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_keyboard_visibility: ^2.0.0
+  flutter_keyboard_visibility: ^5.2.0
 
 
 dev_dependencies:
